--- a/source/index.html
+++ b/source/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta chrset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Студия дизайн итерьера</title>
     <link rel="stylesheet" href="css/style.css">
@@ -13,51 +13,60 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="main-header menu">
+      <nav class="main-header__menu menu menu--closed">
         <ul class="menu__static">
-          <li class="menu__logo"><a href="#" class="menu__logo-link"><img src="img/" alt="logo-header"></a></li>
-          <li class="menu__toggle"><a href="#" class="menu__button"></a></li>
-          <li class="menu__phone"><a href="#" class="menu__phone-link"></a></li>
+          <li class="menu__logo"><a href="#" class="menu__logo-link"><picture>
+            <source media="(min-width: 1150px)" srcset="img/logo-desktop.png"><img class="menu__logo-image" src="img/logo.png" alt="logo-header" width="77" height="23">
+          </picture></a></li>
+          <li class="menu__toggle"><button class="menu__button"></button></li>
+          <li class="menu__phone"><a href="#" class="menu__phone-link">+7 (800) 823  48 88</a></li>
         </ul>
         <ul class="menu__list">
-          <li class="menu__item"><a href="#" class="menu__link">Главная</a></li>
+          <li class="menu__item"><a href="#" class="menu__link menu__link--active">Главная</a></li>
           <li class="menu__item"><a href="#" class="menu__link">Преимущества</a></li>
           <li class="menu__item"><a href="#" class="menu__link">Портфолио</a></li>
           <li class="menu__item"><a href="#" class="menu__link">Наши услуги</a></li>
           <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
           <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+          <li class="menu__item menu__item--social"><div class="social">
+            <ul class="social__list">
+              <li class="social__item"><a href="" class="social__vk"><img src="..//img/vk-footer.png" alt="vk" class="social__image social__image--vk" width="22" height="14"></a></li>
+              <li class="social__item"><a href="" class="social__instagram"><img src="..//img/instagram-footer.png" alt="inst" class="social__image social__image--inst" width="22" height="22"></a></li>
+              <li class="social__item"><a href="" class="social__facebook"><img src="..//img/facebook-footer.png" alt="fb" class="social__image social__image--fb" width="12" height="22"></a></li></li>
         </ul>
       </nav>
-      <section class="main-header__preview preview">
+      <div class="main-header__preview preview">
         <div class="preview__wrap">
           <h2 class="preview__title">Дизайн интерьеров</h2>
           <p class="preview__text">Воплотим в жизнь интерьер, который будет радовать лаконичностью и уютом.</p>
           <a href="" class="preview__link">Заказать дизайн</a>
-          <div class="preview__social social">
+        </div>
+        <div class="preview__social social">
             <ul class="social__list">
-              <li class="social__item"><a href="" class="social__vk"></a></li>
-              <li class="social__item"><a href="" class="social__instagram"></a></li>
-              <li class="social__item"><a href="" class="social__facebook"></a></li>
+              <li class="social__item"><a href="" class="social__vk"><img src="..//img/vk.png" alt="vk" class="social__image social__image--vk" width="22" height="14"></a></li>
+              <li class="social__item"><a href="" class="social__instagram"><img src="..//img/instagram.png" alt="inst" class="social__image social__image--inst" width="22" height="22"></a></li>
+              <li class="social__item"><a href="" class="social__facebook"><img src="..//img/facebook.png" alt="fb" class="social__image social__image--fb" width="12" height="22"></a></li></li>
             </ul>
           </div>
-        </div>
-      </section>
+      </div>
       <div class="main-header__slider slider">
         <ul class="slider__list">
-          <li class="slider__item"><img src="img/" alt="slider-image"></li>
-          <li class="slider__item"><img src="img/" alt="slider-image"></li>
-          <li class="slider__item"><img src="img/" alt="slider-image"></li>
-          <li class="slider__item"><img src="img/" alt="slider-image"></li>
+          <li class="slider__item slider__item--active"><picture>
+            <img src="img/slide-1-desktop@1x.jpg" srcset="img/slide-1-desktop@2x.jpg 2x" alt="slider-image">
+          </picture></li>
+          <li class="slider__item"><img src="img/slide-1-desktop@1x.jpg" srcset="img/slide-1-desktop@2x.jpg" alt="slider-image"></li>
+          <li class="slider__item"><img src="img/slide-1-desktop@1x.jpg" srcset="img/slide-1-desktop@2x.jpg" alt="slider-image"></li>
+          <li class="slider__item"><img src="img/slide-1-desktop@1x.jpg" srcset="img/slide-1-desktop@2x.jpg" alt="slider-image"></li>
         </ul>
         <div class="slider__controls controls">
-          <input type="radio" id="button-1">
-          <label for="button-1"></label>
-          <input type="radio" id="button-2">
-          <label for="button-2"></label>
-          <input type="radio" id="button-3">
-          <label for="button-3"></label>
-          <input type="radio" id="button-4">
-          <label for="button-4"></label>
+            <input class="visually-hidden" type="radio" id="button-1" name="toggle-sleder" value="1" checked>
+            <label class="controls__item" for="button-1"></label>
+            <input class="visually-hidden" type="radio" id="button-2" name="toggle-sleder" value="2">
+            <label class="controls__item" for="button-2"></label>
+            <input class="visually-hidden" type="radio" id="button-3" name="toggle-sleder" value="3">
+            <label class="controls__item" for="button-3"></label>
+            <input class="visually-hidden" type="radio" id="button-4" name="toggle-sleder" value="4">
+            <label class="controls__item" for="button-4"></label>
         </div>
       </div>
     </header>
@@ -89,36 +98,52 @@
       </section>
 <!-- ПОРТФОЛИО -->
       <section class="portfolio">
+        <h1 class="portfolio__title">Портфолио</h1>
         <nav class="portfolio__menu">
           <ul class="portfolio__list">
-            <li class="portfolio__item"><a href="#" class="porfolio__link">Все проекты</a></li>
-            <li class="portfolio__item"><a href="#" class="porfolio__link">Дизайн интерьеров</a></li>
-            <li class="portfolio__item"><a href="#" class="porfolio__link">Отделочные работы</a></li>
+            <li class="portfolio__item"><a href="#" class="portfolio__link portfolio__link--active">Все проекты</a></li>
+            <li class="portfolio__item"><a href="#" class="portfolio__link">Дизайн интерьеров</a></li>
+            <li class="portfolio__item"><a href="#" class="portfolio__link">Отделочные работы</a></li>
           </ul>
         </nav>
         <div class="portfolio__slider-bar slider-bar">
           <ul class="slider-bar__list">
             <li class="slider-bar__item">
-              <h3 class="slider-bar__title"></h3>
-              <img src="" alt="" class="slider-bar__image">
+              <h3 class="slider-bar__title">Дизайн интерьера прихожей</h3>
+              <picture>
+                <source media="(min-width: 1150px)" srcset="img/portfolio-1-desktop@1x.jpg 1x, img/portfolio-1-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/portfolio-1-tablet@1x.jpg 1x, img/portfolio-1-tablet@2x.jpg 2x">
+                <img src="img/portfolio-1-mobile@1x.jpg" alt="portfolio-image" srcset="img/portfolio-1-mobile@2x.jpg 2x" class="slider-bar__image">
+              </picture>
               <span class="slider-bar__tab">Дизайн интерьера</span>
               <button class="slider-bar__button"></button>
             </li>
             <li class="slider-bar__item">
-              <h3 class="slider-bar__title"></h3>
-              <img src="" alt="" class="slider-bar__image">
+              <h3 class="slider-bar__title">Дизайн интерьера гостиной</h3>
+              <picture>
+                <source media="(min-width: 1150px)" srcset="img/portfolio-2-desktop@1x.jpg 1x, img/portfolio-2-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/portfolio-3-tablet@2x.jpg 1x, img/portfolio-3-tablet@2x.jpg 2x">
+                <img src="img/portfolio-2-mobile@1x.jpg" alt="portfolio-image" srcset="img/portfolio-2-mobile@2x.jpg 2x" class="slider-bar__image">
+              </picture>
               <span class="slider-bar__tab">Дизайн интерьера</span>
               <button class="slider-bar__button"></button>
             </li>
             <li class="slider-bar__item">
-              <h3 class="slider-bar__title"></h3>
-              <img src="" alt="" class="slider-bar__image">
+              <h3 class="slider-bar__title">Дизайн столовой в стиле "Бохо"</h3>
+              <picture>
+                <source media="(min-width: 1150px)" srcset="img/portfolio-3-desktop@1x.jpg 1x, img/portfolio-3-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/portfolio-1-tablet@2x.jpg 1x, img/portfolio-1-tablet@2x.jpg 2x">
+                <img src="img/portfolio-3-mobile@1x.jpg" srcset="img/portfolio-1-mobile@2x.jpg 2x" alt="portfolio-image" class="slider-bar__image">
+              </picture>
               <span class="slider-bar__tab">Дизайн интерьера</span>
               <button class="slider-bar__button"></button>
             </li>
             <li class="slider-bar__item">
-              <h3 class="slider-bar__title"></h3>
-              <img src="" alt="" class="slider-bar__image">
+              <h3 class="slider-bar__title">Лофт интерьер для отеля Hiloft</h3>
+              <picture>
+                <source media="(min-width: 1150px)" srcset="img/portfolio-4-desktop@1x.jpg 1x, img/portfolio-4-desktop@2x.jpg 2x">
+                <img src="" class="slider-bar__image">
+              </picture>
               <span class="slider-bar__tab">Дизайн интерьера</span>
               <button class="slider-bar__button"></button>
             </li>
