сверстал разделы service && video и process && contacts

--- a/source/index.html
+++ b/source/index.html
@@ -152,25 +152,30 @@
       </section>
       <!-- УСЛУГИ -->
       <section class="service">
-        <div class="service__wrap">
-          <h2 class="service__title">Наши услуги</h2>
+        <h2 class="service__title">Наши услуги</h2>
+        <div class="service__wrap">   
           <nav class="service__menu">
             <ul class="service__list">
-              <li class="service__item">Дизайн жилого помещения</li>
-              <li class="service__item">Дизайн отельных комнат</li>
-              <li class="service__item">Дизайн коммерческих объектов</li>
-              <li class="service__item">ремонт под ключ</li>
-              <li class="service__item">Отделочные работы</li>
-              <li class="service__item">Выезд дизайнера на дом</li>
+              <li class="service__item"><a href="" class="service__link">Дизайн жилого помещения</a></li>
+              <li class="service__item"><a href="" class="service__link">Дизайн отельных комнат</a></li>
+              <li class="service__item service__item--active"><a href="" class="service__link service__link--active">Дизайн коммерческих объектов</a></li>
+              <li class="service__item"><a href="" class="service__link">Ремонт под ключ</a></li>
+              <li class="service__item"><a href="" class="service__link">Отделочные работы</a></li>
+              <li class="service__item"><a href="" class="service__link">Выезд дизайнера на дом</a></li>
             </ul>
           </nav>
-          <div class="service__block">
-            <div class="service__wrap-image"><img src="" alt="" class="service__image"></div>
-            <div class="service__info">
-              <h2 class="service__title">Дизайн жилого помещения</h2>
-              <p class="service__text">Работая с коммерческими объектами, студия изучает целевую аудиторию, создаем коммерческие интерьеры такими, чтобы посетители кафе, бара, гостиницы хотели возвращаться в интерьер снова и снова</p>
+          <div class="service__block  show">
+            <div class="service__wrap-image">
+              <picture>
+                <source media="(min-width: 1150px)" srcset="img/service-1-desktop@1x.jpg 1x, img/service-1-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/service-1-tablet@1x.jpg 1x, img/service-1-tablet@2x.jpg 2x">
+                <img src="img/service-1-mobile@1x.jpg" srcset="img/service-1-mobile@2x.jpg 2x" alt="service-image" class="service__image">
+              </picture>
             </div>
-            <div class="service__consultation"><span class="service__span"></span><button class="service__button">Консультация</button></div>
+            <div class="service__info">
+              <h2 class="service__title service__title--footer">Дизайн жилого помещения</h2>
+              <p class="service__text">Работая с коммерческими объектами, студия изучает целевую аудиторию, создаем коммерческие интерьеры такими, чтобы посетители кафе, бара, гостиницы хотели возвращаться в интерьер снова и снова</p>
+            </div>         
           </div>
           <div class="service__block">
             <div class="service__wrap-image"><img src="" alt="" class="service__image"></div>
@@ -178,46 +183,45 @@
               <h2 class="service__title">Дизайн отельных комнат</h2>
               <p class="service__text">Работая с коммерческими объектами, студия изучает целевую аудиторию, создаем коммерческие интерьеры такими, чтобы посетители кафе, бара, гостиницы хотели возвращаться в интерьер снова и снова</p>
             </div>
-            <div class="service__consultation"><span class="service__span"></span><button class="service__button">Консультация</button></div>
           </div>
           <div class="service__block">
             <div class="service__wrap-image"><img src="" alt="" class="service__image"></div>
             <div class="service__info">
-              <h2 class="service__title">Дизайн коммерческих обектов</h2>
+              <h2 class="service__title service__title--footer">Дизайн коммерческих обектов</h2>
               <p class="service__text">Работая с коммерческими объектами, студия изучает целевую аудиторию, создаем коммерческие интерьеры такими, чтобы посетители кафе, бара, гостиницы хотели возвращаться в интерьер снова и снова</p>
             </div>
-            <div class="service__consultation"><span class="service__span"></span><button class="service__button">Консультация</button></div>
           </div>
           <div class="service__block">
             <div class="service__wrap-image"><img src="" alt="" class="service__image"></div>
             <div class="service__info">
-              <h2 class="service__title">Ремонт под ключ</h2>
+              <h2 class="service__title service__title--footer">Ремонт под ключ</h2>
               <p class="service__text">Работая с коммерческими объектами, студия изучает целевую аудиторию, создаем коммерческие интерьеры такими, чтобы посетители кафе, бара, гостиницы хотели возвращаться в интерьер снова и снова</p>
             </div>
-            <div class="service__consultation"><span class="service__span"></span><button class="service__button">Консультация</button></div>
           </div>
           <div class="service__block">
             <div class="service__wrap-image"><img src="" alt="" class="service__image"></div>
             <div class="service__info">
-              <h2 class="service__title">Отделочные работы</h2>
+              <h2 class="service__title service__title--footer">Отделочные работы</h2>
               <p class="service__text">Работая с коммерческими объектами, студия изучает целевую аудиторию, создаем коммерческие интерьеры такими, чтобы посетители кафе, бара, гостиницы хотели возвращаться в интерьер снова и снова
               </p>
             </div>
-            <div class="service__consultation"><span class="service__span"></span><button class="service__button">Консультация</button></div>
           </div>
           <div class="service__block">
             <div class="service__wrap-image"><img src="" alt="" class="service__image"></div>
             <div class="service__info">
-              <h2 class="service__title">Выезд дизайнера на дом</h2>
+              <h2 class="service__title service__title--footer">Выезд дизайнера на дом</h2>
               <p class="service__text">Работая с коммерческими объектами, студия изучает целевую аудиторию, создаем коммерческие интерьеры такими, чтобы посетители кафе, бара, гостиницы хотели возвращаться в интерьер снова и снова</p>
             </div>
-            <div class="service__consultation"><span class="service__span"></span><button class="service__button">Консультация</button></div>
           </div>
         </div>
+        <div class="service__consultation"><span class="service__span">532 проекта</span><button class="service__button">Консультация</button></div>
       </section>
      <!--  ВИДЕО -->
       <article class="video">
-        <div class="video__wrap"></div>
+        <div class="video__wrap">
+              <button class="video__button"><img src="img/play.svg" alt="" width="17" height="21"></button>
+              <p class="video__text">О студии дизайна интерьеров BRUSH за 2 минуты</p>
+        </div>
       </article>
       <!-- ЭТАПЫ РАБОТЫ -->
       <section class="process">
@@ -254,22 +258,23 @@
       <!-- КОНТАКТЫ -->
       <section class="contacts">
         <div class="contacts__request">
-          <h2 class="contacts__title">Мечтаете об интерьере от BRUME?</h2>
+          <h2 class="contacts__title">Мечтаете об интерьере от BRUSH?</h2>
           <p class="contacts__text">Оставьте контактные данные. Менеджер свяжется с вами в течении 15 минут, для уточнения всех деталей.</p>
           <form action="get" class="contacts__form">
             <fieldset class="contacts__group">
               <input type="text" placeholder="Имя*">
-              <svg></svg>
               <input type="text" placeholder="Телефон*">
-              <svg></svg>
               <input type="text" placeholder="E-mail">
-              <svg></svg>
             </fieldset>
             <button class="contacts__button">Отправить</button>
             <p class="contacts__notification">Нажимая на кнопку, вы соглашаетесь с условиями обработки персональнх данных</p>
+            <img src="img/name-icon.png" alt="icon-image" class="contacts__image contacts__image--name">
+            <img src="img/phone-icon.png" alt="icon-image" class="contacts__image contacts__image--phone">
+            <img src="img/email-icon.png" alt="icon-image" class="contacts__image contacts__image--email">
           </form>
         </div>
-        <div class="contacts__wrap-image"><img src="img" alt="contacts-image" class="contacts__image"></div>
+        <div class="contacts__wrap-image">
+        </div>
       </section>
       <!-- ОТЗЫВЫ -->
       <section class="comments">
@@ -279,25 +284,25 @@
             <li class="comments__item">
               <h3 class="comments__head">Александра Холодная</h3>
               <h4 class="comments__subhead">Услуга: интерьер детской</h4>
-              <p class="comments__text">Спасибо студии за замечательный интерьер для моей 4-х летней дочки! Работа прошла быстро и легко, команда выполнила все точно в срок, сделали все как  мы и хотели.В следующий раз обратимся к BRUME!</p>
+              <p class="comments__text">Спасибо студии за замечательный интерьер для моей 4-х летней дочки! Работа прошла быстро и легко, команда выполнила все точно в срок, сделали все как  мы и хотели.В следующий раз обратимся к BRUSH!</p>
               <img src="" alt="" class="comments__image">
             </li>
             <li class="comments__item">
               <h3 class="comments__head">Александра Холодная</h3>
               <h4 class="comments__subhead">Услуга: интерьер детской</h4>
-              <p class="comments__text">Спасибо студии за замечательный интерьер для моей 4-х летней дочки! Работа прошла быстро и легко, команда выполнила все точно в срок, сделали все как  мы и хотели.В следующий раз обратимся к BRUME!</p>
+              <p class="comments__text">Спасибо студии за замечательный интерьер для моей 4-х летней дочки! Работа прошла быстро и легко, команда выполнила все точно в срок, сделали все как  мы и хотели.В следующий раз обратимся к BRUSH!</p>
               <img src="" alt="" class="comments__image">
             </li>
             <li class="comments__item">
               <h3 class="comments__head">Александра Холодная</h3>
               <h4 class="comments__subhead">Услуга: интерьер детской</h4>
-              <p class="comments__text">Спасибо студии за замечательный интерьер для моей 4-х летней дочки! Работа прошла быстро и легко, команда выполнила все точно в срок, сделали все как  мы и хотели.В следующий раз обратимся к BRUME!</p>
+              <p class="comments__text">Спасибо студии за замечательный интерьер для моей 4-х летней дочки! Работа прошла быстро и легко, команда выполнила все точно в срок, сделали все как  мы и хотели.В следующий раз обратимся к BRUSH!</p>
               <img src="" alt="" class="comments__image">
             </li>
             <li class="comments__item">
               <h3 class="comments__head">Александра Холодная</h3>
               <h4 class="comments__subhead">Услуга: интерьер детской</h4>
-              <p class="comments__text">Спасибо студии за замечательный интерьер для моей 4-х летней дочки! Работа прошла быстро и легко, команда выполнила все точно в срок, сделали все как  мы и хотели.В следующий раз обратимся к BRUME!</p>
+              <p class="comments__text">Спасибо студии за замечательный интерьер для моей 4-х летней дочки! Работа прошла быстро и легко, команда выполнила все точно в срок, сделали все как  мы и хотели.В следующий раз обратимся к BRUSH!</p>
               <img src="" alt="" class="comments__image">
             </li>
           </ul>
