--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,7 @@
     <link rel="preload" href="fonts/raleway-v12-latin-300.woff2" as="font">
     <link rel="preload" href="fonts/raleway-v12-latin-regular.woff2" as="font">
     <link rel="preload" href="fonts/raleway-v12-latin-700.woff2" as="font">
+    
   </head>
   <body>
     <header class="main-header">
@@ -51,23 +52,19 @@
       </div>
       <div class="main-header__slider slider">
         <ul class="slider__list">
-          <li class="slider__item"><picture>
-            <img src="img/slide-1-desktop@1x.jpg" srcset="img/slide-1-desktop@2x.jpg 2x" alt="slider-image">
-          </picture></li>
-          <li class="slider__item"><img src="img/slide-2-desktop@1x.jpg" srcset="img/slide-2-desktop@2x.jpg" alt="slider-image"width="1163" height="595"></li>
+          <li class="slider__item"><img src="img/slide-1-desktop@1x.jpg" srcset="img/slide-1-desktop@2x.jpg 2x" alt="slider-image"></li>
+          <li class="slider__item"><img src="img/slide-2-desktop@1x.jpg" srcset="img/slide-2-desktop@2x.jpg" alt="slider-image"></li>
           <li class="slider__item"><img src="img/slide-3-desktop@1x.jpg" srcset="img/slide-3-desktop@2x.jpg" alt="slider-image" ></li>
           <li class="slider__item"><img src="img/slide-4-desktop@1x.jpg" srcset="img/slide-4-desktop@2x.jpg" alt="slider-image"></li>
         </ul>
-        <div class="slider__controls controls">
-            <input class="visually-hidden" type="radio" id="button-1" name="toggle-sleder" value="1" checked>
-            <label class="controls__item" for="button-1"></label>
-            <input class="visually-hidden" type="radio" id="button-2" name="toggle-sleder" value="2">
-            <label class="controls__item" for="button-2"></label>
-            <input class="visually-hidden" type="radio" id="button-3" name="toggle-sleder" value="3">
-            <label class="controls__item" for="button-3"></label>
-            <input class="visually-hidden" type="radio" id="button-4" name="toggle-sleder" value="4">
-            <label class="controls__item" for="button-4"></label>
-        </div>
+        <ul class="slider__controls controls">
+            <li class="active"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+         <button id="prev">Prev</button>
+  <button id="next">Next</button>
       </div>
     </header>
     <main>
@@ -369,7 +366,9 @@
           </div>
         </div>
       </footer>
+      <button class="button-top"></button>
     </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
