--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Студия предлагает дизайн подключ различныз объектов"/>
     <title>Студия дизайн итерьера</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="preload" href="fonts/playfair-display-v13-cyrillic-regular.woff2" as="font">
     <link rel="preload" href="fonts/playfair-display-v13-cyrillic-700.woff2" as="font">
     <link rel="preload" href="fonts/raleway-v12-latin-300.woff2" as="font">
@@ -407,7 +407,7 @@
             </ul>
           </div>
           <div class="main-footer__designer">
-            <p class="main-footer__name">HolodnayaDesign</p>
+            <p class="main-footer__name">Boliev</p>
           </div>
         </div>
       </footer>
